--- a/lessons/5-using-addition-resources/serverless.yml
+++ b/lessons/5-using-addition-resources/serverless.yml
@@ -1,5 +1,5 @@
 
-service: using-http-cors-example
+service: event-driven-app
 
 provider:
   name: aws
@@ -25,4 +25,3 @@ functions:
 
 # use the resources block to define a dynamoDB table
 resources:
-
