--- a/lessons-code-complete/5-using-addition-resources/serverless.yml
+++ b/lessons-code-complete/5-using-addition-resources/serverless.yml
@@ -1,5 +1,5 @@
 
-service: using-http-cors-example
+service: event-driven-app
 
 provider:
   name: aws
@@ -30,7 +30,6 @@ functions:
           path: scan
           method: post
           cors: true
-
 
 resources:
   Resources:
