--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "docs": "node docs.js",
     "split": "split-guide generate --templatesDir _instructor --exercisesDir lessons --exercisesFinalDir lessons-code-complete",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "David Wells",
   "license": "MIT",
   "devDependencies": {
+    "markdown-magic": "^0.1.19",
     "split-guide-yml": "0.0.3"
   }
 }
