--- a/_instructor/events/dynamodb-streams/serverless.yml
+++ b/_instructor/events/dynamodb-streams/serverless.yml
@@ -11,11 +11,23 @@ provider:
       Action:
         - dynamodb:PutItem
         - dynamodb:Scan
-        - dynamodb:DeleteItem # New DeleteItem permission for `delete` function
-        - dynamodb:GetRecords # New permissions needed for stream
+        # WORKSHOP_START
+        # The IAM role must be updated to include `DeleteItem`
+        # WORKSHOP_END
+        # FINAL_START
+        # New DeleteItem permission for `delete` function
+        - dynamodb:DeleteItem
+        # FINAL_END
+        # WORKSHOP_START
+        # For Dynamo Stream access. You will need the `GetRecords`, `GetShardIterator`, `DescribeStream`, `ListStreams` permissions
+        # WORKSHOP_END
+        # FINAL_START
+        # New permissions needed for stream
+        - dynamodb:GetRecords
         - dynamodb:GetShardIterator
         - dynamodb:DescribeStream
         - dynamodb:ListStreams
+        # FINAL_END
       Resource: { Fn::GetAtt: [ myDynamoTable, Arn ] }
 
 functions:
@@ -33,7 +45,10 @@ functions:
           path: scan
           method: post
           cors: true
-
+  # WORKSHOP_START
+  # Add a `delete` function triggered by an http POST
+  # WORKSHOP_END
+  # FINAL_START
   # New delete function
   delete:
     handler: handler.delete
@@ -42,6 +57,11 @@ functions:
           path: delete
           method: post
           cors: true
+  # FINAL_END
+  # WORKSHOP_START
+  # Add a `handleStream` function triggered by a dynamo Stream http://bit.ly/2mhkJne
+  # WORKSHOP_END
+  # FINAL_START
   # New stream handler function
   handleStream:
     handler: handler.dynamoStreamHandler
@@ -50,6 +70,7 @@ functions:
           type: dynamodb
           arn: { Fn::GetAtt: [ myDynamoTable, StreamArn ] }
           batchSize: 1
+  # FINAL_END
 
 resources:
   Resources:
@@ -66,5 +87,10 @@ resources:
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
+        # WORKSHOP_START
+        # add a stream to the dynamoDB table
+        # WORKSHOP_END
+        # FINAL_START
         StreamSpecification:
           StreamViewType: NEW_AND_OLD_IMAGES
+        # FINAL_END
