--- a/_instructor/core-concepts/3-using-env-vars/serverless.yml
+++ b/_instructor/core-concepts/3-using-env-vars/serverless.yml
@@ -22,7 +22,7 @@ functions:
   bar:
     handler: handler.bar
     # WORKSHOP_START
-    # Step 2. add an environment variable only `bar` function to access. http://bit.ly/2yVp4CR
+    # Step 2. In this_file, add an environment variable only `bar` function to access. http://bit.ly/2yVp4CR
     # WORKSHOP_END
     # FINAL_START
     environment:
