--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "docs": "node docs.js",
-    "presplit": "rm -rf lessons && rm -rf lessons-code-complete",
+    "presplit": "rm -rf lessons && rm -rf lessons-code-complete && npm run docs",
     "split": "split-guide generate --templatesDir _instructor --exercisesDir lessons --exercisesFinalDir lessons-code-complete",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
