--- a/lessons/core-concepts/1-http-hello-world/serverless.yml
+++ b/lessons/core-concepts/1-http-hello-world/serverless.yml
@@ -8,5 +8,4 @@ provider:
 functions:
   hello:
     handler: handler.hello
-    # Add an http GET event to trigger this function
-    # docs link: http://bit.ly/2mkgV4P
+    # Step 4. In this_file, add an `http` GET event to trigger this function. http://bit.ly/2mkgV4P #
