--- a/lessons/events/schedule/serverless.yml
+++ b/lessons/events/schedule/serverless.yml
@@ -7,6 +7,6 @@ provider:
 
 functions:
   cron:
-    handler: handler.cron
+    handler: handler.cronFunction
     # Add an schedule event to trigger this function every minute
     # Schedule event docs: http://bit.ly/2ACbjVU
