--- a/lessons/core-concepts/2-http-post-with-cors/serverless.yml
+++ b/lessons/core-concepts/2-http-post-with-cors/serverless.yml
@@ -12,4 +12,4 @@ functions:
       - http:
           path: function-with-cors
           method: post
-          # Add cors settings. docs link: http://bit.ly/2mkgV4P
+          # Step 1. In this_file, Add cors settings to `http` event. http://bit.ly/2mkgV4P
