--- a/_instructor/core-concepts/7-using-multiple-stages/serverless.yml
+++ b/_instructor/core-concepts/7-using-multiple-stages/serverless.yml
@@ -2,7 +2,7 @@
 service: using-multiple-stages
 
 # WORKSHOP_START
-# Step 3. In this_file, add a `custom` block and define a `stage` property. Set that property to a serverless ${variable} with a default value of 'dev'
+# Step 3. In this_file, add a `custom` block and define a `stage` property. Set that property to a serverless ${variable} with a default value of 'dev' #
 # WORKSHOP_END
 # FINAL_START
 custom:
