--- a/lessons/core-concepts/5-using-addition-resources/serverless.yml
+++ b/lessons/core-concepts/5-using-addition-resources/serverless.yml
@@ -4,8 +4,8 @@ service: event-driven-app
 provider:
   name: aws
   runtime: nodejs6.10
-  # Define the IAM role needed for the function to access the newly created dynamo table
-  # See final code for example
+  # Step 3. In this_file, add the database table name to the service's `environment` variables. The `aws-sdk` will need to know the table name in order to access the table
+  # Step 2. In this_file, add a new IAM role the lambda function needs in order to access the newly created dynamoDB table.
 
 functions:
   create:
@@ -23,5 +23,5 @@ functions:
           method: post
           cors: true
 
-# use the resources block to define a dynamoDB table
+# Step 1. Add the dynamoDB cloudformation to the `resources` block of this_file #
 resources:
