--- a/lessons/core-concepts/5-using-addition-resources/serverless.yml
+++ b/lessons/core-concepts/5-using-addition-resources/serverless.yml
@@ -23,5 +23,5 @@ functions:
           method: post
           cors: true
 
-# Step 1. Add the dynamoDB cloudformation to the `resources` block of this_file #
+# Step 1. Add the DynamoDB CloudFormation in `readme.md` to the `resources` block of this_file #
 resources:
