--- a/_instructor/core-concepts/3-using-env-vars/serverless.yml
+++ b/_instructor/core-concepts/3-using-env-vars/serverless.yml
@@ -1,12 +1,12 @@
 
 service: using-env-variables-example
 
+# WORKSHOP_START
+# Step 1. In this_file, add an environment key & value to the `provider` section. This will allow all functions in the secret to access the value. http://bit.ly/2yVp4CR #
+# WORKSHOP_END
 provider:
   name: aws
   runtime: nodejs6.10
-  # WORKSHOP_START
-  # Step 1. In this_file, add an environment variable for all functions to access. http://bit.ly/2yVp4CR
-  # WORKSHOP_END
   # FINAL_START
   environment:
     MY_ENV_VAR: 'hello there'
@@ -19,11 +19,11 @@ functions:
       - http:
           path: foo
           method: get
+  # WORKSHOP_START
+  # Step 2. In this_file, add an environment variable to the `bar` function. Adding `enviroment` to the function level scope them to a single function. http://bit.ly/2yVp4CR #
+  # WORKSHOP_END
   bar:
     handler: handler.bar
-    # WORKSHOP_START
-    # Step 2. In this_file, add an environment variable only `bar` function to access. http://bit.ly/2yVp4CR
-    # WORKSHOP_END
     # FINAL_START
     environment:
       MY_ENV_VAR_FOR_BAR: 'only bar has this'
