--- a/lessons-code-complete/core-concepts/4-using-serverless-variable-syntax/serverless.yml
+++ b/lessons-code-complete/core-concepts/4-using-serverless-variable-syntax/serverless.yml
@@ -5,7 +5,7 @@ provider:
   name: aws
   runtime: nodejs6.10
   environment:
-    MY_SECRET: ${file(./secrets.json):MY_SECRET}
+    MY_SECRET: ${file(./secrets.json):VAR_FROM_FILE}
 
 functions:
   foo:
