--- a/lessons/core-concepts/4-using-serverless-variable-syntax/serverless.yml
+++ b/lessons/core-concepts/4-using-serverless-variable-syntax/serverless.yml
@@ -1,14 +1,10 @@
 
 service: serverless-variables-syntax-example
 
+# Step 2. In this_file, replace the hardcoded value for the for `MY_SECRET` environment variable with a serverless variable using the file reference syntax `${file(path):key}`. Reference the `VAR_FROM_FILE` value from `secrets.json` #
 provider:
   name: aws
   runtime: nodejs6.10
-  # change the hardcoded secret to a serverless variable reference
-  # 1. Create a secrets.json file
-  # 2. reference the file with serverless variable syntax for `MY_SECRET` value
-  # 3. .gitignore secrets.json
-  # variables doc link http://bit.ly/2zw4DM9
   environment:
     MY_SECRET: xyz123
 
