--- a/_instructor/events/schedule/serverless.yml
+++ b/_instructor/events/schedule/serverless.yml
@@ -9,8 +9,7 @@ functions:
   cron:
     handler: handler.cronFunction
     # WORKSHOP_START
-    # Add an schedule event to trigger this function every minute
-    # Schedule event docs: http://bit.ly/2ACbjVU
+    # Step 1. In this_file, add a `schedule` event to trigger this function every minute. See `schedule` event docs: http://bit.ly/2ACbjVU
     # WORKSHOP_END
     # FINAL_START
     events:
