--- a/_instructor/events/sns/sns-basic/serverless.yml
+++ b/_instructor/events/sns/sns-basic/serverless.yml
@@ -1,13 +1,29 @@
 service: aws-sns-basic
 
+
+# WORKSHOP_START
+# Step 1. In this_file, Define a `custom` block and add `topicName`. We will use this reference in other areas of serverless.yml #
+# WORKSHOP_END
+# FINAL_START
 custom:
   topicName: sns-basic-topic-example
+# FINAL_END
 
 provider:
   name: aws
   runtime: nodejs6.10
+  # WORKSHOP_START
+  # Step 3. In this_file, Expose the `TOPIC_NAME` to `environment` variables using the `${self:custom.topicName}` reference #
+  # WORKSHOP_END
+  # FINAL_START
   environment:
     TOPIC_NAME: ${self:custom.topicName}
+  # FINAL_END
+  # WORKSHOP_START
+  # Step 4. In this_file, Create the IAM role `iamRoleStatements` needed to `sns:Publish`
+  # Narrow the scope of the permission to the sns in this service
+  # WORKSHOP_END
+  # FINAL_START
   iamRoleStatements:
     - Effect: "Allow"
       Action:
@@ -24,5 +40,10 @@ functions:
           cors: true
   eventConsumer:
     handler: handler.eventConsumer
+    # WORKSHOP_START
+    # Step 2. in this_file, attach the `sns` event to the `eventConsumer` function. See the sns event docs link http://bit.ly/2mvPbdF #
+    # WORKSHOP_END
+    # FINAL_START
     events:
       - sns: ${self:custom.topicName}
+    # FINAL_END
