--- a/lessons-code-complete/events/sns/sns-basic/serverless.yml
+++ b/lessons-code-complete/events/sns/sns-basic/serverless.yml
@@ -1,5 +1,6 @@
 service: aws-sns-basic
 
+
 custom:
   topicName: sns-basic-topic-example
 
@@ -24,5 +25,6 @@ functions:
           cors: true
   eventConsumer:
     handler: handler.eventConsumer
+    # FINAL_START
     events:
       - sns: ${self:custom.topicName}
