--- a/lessons/core-concepts/4-using-env-vars/serverless.yml
+++ b/lessons/core-concepts/4-using-env-vars/serverless.yml
@@ -13,7 +13,7 @@ functions:
       - http:
           path: foo
           method: get
-  # Step 2. In this_file, add an environment variable to the `bar` function. Adding `enviroment` to the function level scope them to a single function. http://bit.ly/2yVp4CR #
+  # Step 2. In this_file, add an environment variable to the `bar` function. Adding `environment` to the function level scope them to a single function. http://bit.ly/2yVp4CR #
   bar:
     handler: handler.bar
     events:
