--- a/lessons/events/step-functions/serverless.yml
+++ b/lessons/events/step-functions/serverless.yml
@@ -12,7 +12,7 @@ provider:
   name: aws
   runtime: nodejs6.10
   stage: ${self:custom.stage}
-  # Step 4. In this_file, reference the Output value of the state machine. ${self:resources.Outputs.MyStateMachine.Value} in the `enviroment` variables #
+  # Step 4. In this_file, reference the Output value of the state machine. ${self:resources.Outputs.MyStateMachine.Value} in the `environment` variables #
   # Step 5. In this_file, Attach the need `iamRoleStatements` to Allow access to step functions `states:*` #
 
 functions:
